Improved the overall security